Versão que foi enviada para a revisão

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-  "name":"leone/results-federal",
+  "name":"leone/loteria-federal",
   "description":"Meus pais gostam de acompanhar os resultados da loteria e eles sempre ficam me pedindo para olhar e falar pra eles, por isso resolvi fazer essa skill assim eles vão poder pedir a Alexa.",
   "autoload":{
     "psr-4":{
-      "Leone\\Results\\":"app/"
+      "Leone\\Loteria\\Federal\\":"app/"
     }
   },
   "require": {
